--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
 				<p class="p5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime neque eaque reiciendis quae repellat.</p>
 			</div>
 			<div class="div11">
-				<img src="face.png" alt="" width="50px" height="50px">
-				<img src="twitt.jpg" alt="" width="50px" height="50px">
-				<img src="g+.png" alt="" width= "50px" height="50px">
-				<img src="icone-pinterest-gris.png" alt="" width="50px" height="50px">
-				<img src="insta.png" alt="" width="50px" height="50px">
-				<img src="wifi.png" alt="" width="50px" height="50px">
+				<img src="img/face.png" alt="" width="50px" height="50px">
+				<img src="img/twitt.jpg" alt="" width="50px" height="50px">
+				<img src="img/g+.png" alt="" width= "50px" height="50px">
+				<img src="img/icone-pinterest-gris.png" alt="" width="50px" height="50px">
+				<img src="img/insta.png" alt="" width="50px" height="50px">
+				<img src="img/wifi.png" alt="" width="50px" height="50px">
 			</div>		
 	</footer>
 	<script src="script.js"></script>
